make github text consistent

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 										<li>Developed in collaboration with four fellow students at TCNJ</li>
 									</ul>  
 									<ul class="actions special">
-										<li><a href="https://github.com/schmij12/trentonianaDB" class="button">Github Repo</a></li>
+										<li><a href="https://github.com/schmij12/trentonianaDB" class="button">Github</a></li>
 									</ul>
 								</article>
 								<article>
