some additonal changes

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 								</article>
 								<article>
 									<header>
-										<h2>ML and NLP Research Team<br />
-											- Active Learning & Text Representaitons
+										<h2>Machine Learning and Natural Language Processing<br />
+											- Research Experience
 										</h2>
 									</header>
 									<a class="image fit"><img src="images/ML.png" alt="" /></a>
@@ -126,7 +126,7 @@
 										<li>Main Focus of the Machine Learning and Natural Language Processing Research Group was using active learning to find the optimal point to stop training models</li>
 										<li>Added new text representations such as BERT into the codebase</li>
 										<li>Ran experiments using slurm on TCNJ's HPC to test the models produced from different text representations</li>
-										<li>Utilized pandas and numpy libaries as well as matplotlib to graph results from experiments</li>
+										<li>Utilized the pandas, scikit-learn, and numpy Python libaries as well as matplotlib to graph results from experiments</li>
 										<li>Collaborated with team to develop a new open source codebase using modAL that was simpler to work with and used around 80-90% less lines of code</li>
 									</ul>  
 								</article>
@@ -169,7 +169,7 @@
 							<div style="text-align: center;">
 								<h2 style="font-size: 50px;">Skills and Interests</h2>
 								<ul style="list-style-type: none; padding: 0; text-align:left">
-								  <li><b>Programming Languages:</b> Python, C, C++, C#, Ruby, HTML/CSS, JavaScript, Java, Visual Basic, Postgres (SQL)</li>
+								  <li><b>Programming Languages:</b> Python, C, C++, C#, Ruby, HTML/CSS, JavaScript, Java, Postgres (SQL)</li>
 								  <li><b>Software / Tools:</b> Git, Visual Studio, Linux / Unix, Matplotlib, NumPy, Pandas, Unity (2D/3D), MPI, Agile Development, Scrum, Slurm/HPCs, Android, UML, Windows, Bootstrap</li>
 								  <li><b>Interests:</b> Game Development, Artificial Intelligence / Machine Learning, Software Development</li>
 								</ul>
