--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 								<h2 style="font-size: 50px;">Skills and Interests</h2>
 								<ul style="list-style-type: none; padding: 0; text-align:left">
 								  <li><b>Programming Languages:</b> Python, C, C++, C#, Ruby, HTML/CSS, JavaScript, Java, Postgres (SQL)</li>
-								  <li><b>Software / Tools:</b> Git, Visual Studio, Linux / Unix, Matplotlib, NumPy, Pandas, Unity (2D/3D), MPI, Agile Development, Scrum, Slurm/HPCs, Android, UML, Windows, Bootstrap</li>
+								  <li><b>Software / Tools:</b> Git, Visual Studio, Linux / Unix, Matplotlib, NumPy, Pandas, Unity (2D/3D), MPI, Agile Development, Scrum, Slurm/HPCs, Selenium, Android, UML, Windows, Bootstrap</li>
 								  <li><b>Interests:</b> Game Development, Artificial Intelligence / Machine Learning, Software Development</li>
 								</ul>
 							  </div>
