--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 										<li>Information about different types of trash and environmental facts about the specific trash,
 											such as decomposition time, whether it's recyclable or not, etc.</li>
 										<li>Used C# for scripts and used free assets for models in the game</li>
+										<li>I worked on the randomization of spawn points for the trash, pause/start menu, pedestrians, vacuum to collect trash, and general scripting UI/ additions</li>
 										<li>Developed with two other students at TCNJ using Unity 3D</li>
 									  </ul>  
 								</article>
@@ -90,8 +91,9 @@
 									<ul style="list-style-type:disc; text-align: left">
 										<li>Choose an artist and guess the name of the song that is playing</li>
 										<li>Written in python utilizing the pygame and spotipy libraries</li>
+										<li>I worked primarily on the backend - e.g. getting the songs to download/ play natively inside the game; also helped work on the UI</li>
 										<li>One player and two player mode</li>
-										<li>Text-to-speech option</li>
+										<li>Implemented a text-to-speech option utlizing a python library found on GitHub</li>
 										<li>Developed with three other students at TCNJ</li>
 									</ul>  
 									<ul class="actions special">
@@ -105,9 +107,9 @@
 									</header>
 									<a class="image fit"><img src="images/trenton.png" alt="" /></a>
 									<ul style="list-style-type:disc; text-align: left">
-										<li>Website written in HTML/CSS and Javascript for the frontend</li>
-										<li>Python's flask framework for the backend and PostgreSQL for the database</li>
-										<li>Reworked audio files/transcripts of the Trentoniana website, includes a search feature</li>
+										<li>Website was written in HTML/CSS and Javascript for the frontend</li>
+										<li>My contributions were primarily in the backend, but also fullstack additions - utilizing Python's flask framework as well as PostgreSQL for the database</li>
+										<li>Reworked audio files/transcripts of the Trentoniana website with a search feature</li>
 										<li>Comment system, login system for users and admins, suggestion system on transcripts</li>
 										<li>Developed in collaboration with four fellow students at TCNJ</li>
 									</ul>  
@@ -169,8 +171,8 @@
 							<div style="text-align: center;">
 								<h2 style="font-size: 50px;">Skills and Interests</h2>
 								<ul style="list-style-type: none; padding: 0; text-align:left">
-								  <li><b>Programming Languages:</b> Python, C, C++, C#, Ruby, HTML/CSS, JavaScript, Java, Postgres (SQL)</li>
-								  <li><b>Software / Tools:</b> Git, Visual Studio, Linux / Unix, Matplotlib, NumPy, Pandas, Unity (2D/3D), MPI, Agile Development, Scrum, Slurm/HPCs, Selenium, Android, UML, Windows, Bootstrap</li>
+								  <li><b>Programming Languages:</b> Python, C, C++, C#, Ruby, HTML5/CSS, JavaScript, Java, Postgres (SQL), Bash</li>
+								  <li><b>Software / Tools:</b> Git, Visual Studio, Linux / Unix, Matplotlib, NumPy, Pandas, Unity (2D/3D), MPI, Agile Development, Scrum, Slurm/HPCs, Selenium, React.js, Bootstrap, Android, UML, Windows</li>
 								  <li><b>Interests:</b> Game Development, Artificial Intelligence / Machine Learning, Software Development</li>
 								</ul>
 							  </div>
