--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
 							<div style="text-align: center;">
 								<h2 style="font-size: 50px;">Skills and Interests</h2>
 								<ul style="list-style-type: none; padding: 0; text-align:left">
-								  <li><b>Programming Languages:</b> Python, C, C++, C#, Ruby, HTML5/CSS, JavaScript, Java, Postgres (SQL), Bash</li>
-								  <li><b>Software / Tools:</b> Git, Visual Studio, Linux / Unix, Matplotlib, NumPy, Pandas, Unity (2D/3D), MPI, Agile Development, Scrum, Slurm/HPCs, Selenium, React.js, Bootstrap, Android, UML, Windows</li>
+								  <li><b>Programming Languages:</b> Python, C, C++, C#/.NET, Ruby, HTML5/CSS, JavaScript, Java, Postgres (SQL), Bash</li>
+								  <li><b>Software / Tools:</b> Git, Visual Studio, Linux / Unix, Matplotlib, NumPy, Pandas, Unity (2D/3D), MPI, Agile Development, Scrum, Slurm/HPCs, Selenium, MVC, React.js, Bootstrap, Android, UML, Windows</li>
 								  <li><b>Interests:</b> Game Development, Artificial Intelligence / Machine Learning, Software Development</li>
 								</ul>
 							  </div>
